--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "babel-cli": "^6.7.7",
     "babel-eslint": "^6.0.4",
+    "babel-plugin-__coverage__": "^0.111111.1",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.7.2",
@@ -52,11 +53,14 @@
     "cross-env": "^1.0.7",
     "eslint": "^2.8.0",
     "eslint-plugin-react": "^5.0.1",
+    "fluxible": "^1.1.0",
+    "fluxible-addons-react": "^0.2.8",
     "jsdom": "^8.4.1",
     "mocha": "^2.4.5",
     "nyc": "^6.4.0",
     "precommit-hook": "^3.0.0",
     "react-addons-test-utils": "^15.0.1",
+    "react-dom": "^15.0.2",
     "rimraf": "^2.5.2"
   },
   "dependencies": {
