--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-element-size-reporter",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "Higher order React components to report contained DOM element sizes",
   "main": "lib",
   "scripts": {
@@ -9,7 +9,8 @@
     "test:cover": "rimraf .nyc_output/ && cross-env BABEL_ENV=cover NYC_CWD=src nyc --reporter=lcov npm test",
     "build": "npm run lint && npm test && babel src/lib/ -d lib/",
     "lint": "eslint .",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "validate": "npm ls"
   },
   "repository": {
     "type": "git",
@@ -33,9 +34,8 @@
   },
   "homepage": "https://github.com/localnerve/react-element-size-reporter#readme",
   "nyc": {
-    "include": [
-      "/"
-    ],
+    "instrument": false,
+    "sourceMap": false,
     "report-dir": "coverage"
   },
   "pre-commit": [
@@ -43,33 +43,33 @@
     "test"
   ],
   "devDependencies": {
-    "babel-cli": "^6.7.7",
+    "babel-cli": "^6.10.1",
     "babel-eslint": "^6.0.4",
-    "babel-plugin-__coverage__": "^1.11.111",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-plugin-__coverage__": "^11.0.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
-    "babel-register": "^6.7.2",
+    "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
-    "cross-env": "^1.0.7",
-    "eslint": "^2.8.0",
-    "eslint-plugin-react": "^5.0.1",
+    "cross-env": "^1.0.8",
+    "eslint": "^2.13.0",
+    "eslint-plugin-react": "^5.2.2",
     "fluxible": "^1.1.0",
     "fluxible-addons-react": "^0.2.8",
-    "jsdom": "^9.0.0",
-    "mocha": "^2.4.5",
-    "mockery": "^1.6.2",
-    "nyc": "^6.4.0",
+    "jsdom": "^9.2.1",
+    "mocha": "^2.5.3",
+    "mockery": "^1.7.0",
+    "nyc": "^6.6.1",
     "precommit-hook": "^3.0.0",
-    "react-addons-test-utils": "^15.0.1",
-    "react-dom": "^15.0.2",
+    "react-addons-test-utils": "^15.1.0",
+    "react-dom": "^15.1.0",
     "rimraf": "^2.5.2"
   },
   "dependencies": {
     "inherits": "^2.0.1",
-    "lodash": "^4.11.1",
-    "react": "^15.0.1",
-    "element-size-reporter": "^0.3.1"
+    "lodash": "^4.13.1",
+    "react": "^15.1.0",
+    "element-size-reporter": "^0.3.4"
   },
   "engines": {
     "node": ">= 4.x"
