--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-element-size-reporter",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "Higher order React components to report contained DOM element sizes",
   "main": "lib",
   "scripts": {
@@ -42,27 +42,27 @@
     "test"
   ],
   "devDependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-eslint": "^6.1.0",
-    "babel-plugin-__coverage__": "^11.0.0",
+    "babel-cli": "^6.11.4",
+    "babel-eslint": "^6.1.2",
+    "babel-plugin-istanbul": "^1.1.0",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-register": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.11.6",
     "chai": "^3.5.0",
-    "coveralls": "^2.11.9",
+    "coveralls": "^2.11.12",
     "cross-env": "^2.0.0",
-    "eslint": "^3.0.0",
+    "eslint": "^3.2.0",
     "eslint-plugin-react": "^5.2.2",
     "fluxible": "^1.2.0",
     "fluxible-addons-react": "^0.2.8",
     "jsdom": "^9.4.1",
     "mocha": "^2.5.3",
     "mockery": "^1.7.0",
-    "nyc": "^6.6.1",
+    "nyc": "^7.1.0",
     "precommit-hook": "^3.0.0",
     "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.1.0",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.4"
   },
   "dependencies": {
     "inherits": "^2.0.1",
