--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-element-size-reporter",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "description": "Higher order React components to report contained DOM element sizes",
   "main": "lib",
   "scripts": {
     "test": "npm run lint && mocha src/tests/unit --recursive --reporter spec --compilers js:babel-register",
     "test:debug": "rimraf output/ && babel ./src -d output -s inline && mocha output/tests/unit --recursive --reporter spec --debug-brk",
     "test:cover": "rimraf .nyc_output/ && cross-env BABEL_ENV=cover NYC_CWD=src nyc --reporter=lcov npm test",
-    "build": "npm run lint && npm test && babel src/lib/ -d lib/",
+    "build": "npm test && babel src/lib/ -d lib/",
     "lint": "eslint .",
     "prepublish": "npm run build",
     "validate": "npm ls"
@@ -44,7 +44,7 @@
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-eslint": "^6.1.2",
-    "babel-plugin-istanbul": "^1.1.0",
+    "babel-plugin-istanbul": "^2.0.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.11.6",
@@ -58,7 +58,7 @@
     "jsdom": "^9.4.1",
     "mocha": "^3.0.0",
     "mockery": "^1.7.0",
-    "nyc": "^7.1.0",
+    "nyc": "^8.1.0",
     "precommit-hook": "^3.0.0",
     "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.1.0",
