--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,9 @@
       "plugins": [
         [
           "istanbul", {
-            "exclude": "src/tests"
+            "exclude": [
+              "src/tests"
+            ]
           }
         ]
       ]
