--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-element-size-reporter",
-  "version": "0.4.7",
+  "version": "0.5.0",
   "description": "Higher order React components to report contained DOM element sizes",
   "main": "lib",
   "scripts": {
@@ -42,33 +42,33 @@
     "test"
   ],
   "devDependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-eslint": "^8.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.0.1",
     "babel-plugin-istanbul": "^4.0.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-register": "^6.11.6",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "chai": "^4.0.0",
-    "coveralls": "^2.11.12",
+    "coveralls": "^3.0.0",
     "cross-env": "^5.0.0",
-    "eslint": "^4.0.0",
-    "eslint-plugin-react": "^7.1.0",
-    "fluxible": "^1.2.0",
-    "fluxible-addons-react": "^0.2.10",
+    "eslint": "^4.7.2",
+    "eslint-plugin-react": "^7.4.0",
+    "fluxible": "^1.4.0",
+    "fluxible-addons-react": "^0.2.13",
     "jsdom": "^11.0.0",
-    "mocha": "^3.0.0",
+    "mocha": "^4.0.0",
     "mockery": "^2.0.0",
-    "nyc": "^11.0.2",
+    "nyc": "^11.2.1",
     "precommit-hook": "^3.0.0",
-    "react-dom": "^15.5.0",
-    "rimraf": "^2.5.4"
+    "react-dom": ">=15.0.0 >=16.0.0",
+    "rimraf": "^2.6.2"
   },
   "dependencies": {
-    "inherits": "^2.0.1",
-    "lodash": "^4.13.1",
-    "react": "^15.5.0",
+    "inherits": "^2.0.3",
+    "lodash": "^4.17.4",
+    "react": ">=15.0.0 >=16.0.0",
     "prop-types": "^15.5.0",
-    "element-size-reporter": "^0.4.1"
+    "element-size-reporter": "^0.5.0"
   },
   "engines": {
     "node": ">= 6"
