--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-element-size-reporter",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "Higher order React components to report contained DOM element sizes",
   "main": "lib",
   "scripts": {
@@ -60,13 +60,13 @@
     "mockery": "^2.0.0",
     "nyc": "^11.2.1",
     "precommit-hook": "^3.0.0",
-    "react-dom": ">=15.0.0 >=16.0.0",
+    "react-dom": "^15.0.0 || ^16.0.0",
     "rimraf": "^2.6.2"
   },
   "dependencies": {
     "inherits": "^2.0.3",
     "lodash": "^4.17.4",
-    "react": ">=15.0.0 >=16.0.0",
+    "react": "^15.0.0 || ^16.0.0",
     "prop-types": "^15.5.0",
     "element-size-reporter": "^0.5.0"
   },
