@0.6.1, update to babel 7+, element-size-reporter 0.6.1

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-element-size-reporter",
-  "version": "0.5.7",
+  "version": "0.6.1",
   "description": "Higher order React components to report contained DOM element sizes",
   "main": "lib",
   "scripts": {
-    "test": "npm run lint && mocha src/tests/unit --recursive --reporter spec --compilers js:babel-register",
+    "test": "npm run lint && mocha src/tests/unit --recursive --reporter spec --compilers js:@babel/register",
     "test:debug": "rimraf output/ && babel ./src -d output -s inline && mocha output/tests/unit --recursive --reporter spec --debug-brk",
     "test:cover": "rimraf .nyc_output/ && cross-env BABEL_ENV=cover NYC_CWD=src nyc --reporter=lcov npm test",
     "build": "npm test && babel src/lib/ -d lib/",
@@ -42,12 +42,13 @@
     "test"
   ],
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.1",
+    "@babel/cli": "^7.1.0",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "babel-eslint": "^10.0.0",
     "babel-plugin-istanbul": "^4.0.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
     "chai": "^4.0.0",
     "coveralls": "^3.0.0",
     "cross-env": "^5.0.0",
@@ -68,7 +69,7 @@
     "lodash": "^4.17.10",
     "react": "^15.0.0 || ^16.0.0",
     "prop-types": "^15.5.0",
-    "element-size-reporter": "^0.5.0"
+    "element-size-reporter": "^0.6.0"
   },
   "engines": {
     "node": ">= 6"
