--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-element-size-reporter",
-  "version": "0.6.6",
+  "version": "0.6.7",
   "description": "Higher order React components to report contained DOM element sizes",
   "main": "lib",
   "scripts": {
-    "test": "npm run lint && mocha src/tests/unit --recursive --reporter spec --compilers js:@babel/register",
+    "test": "npm run lint && mocha src/tests/unit --recursive --reporter spec --require @babel/register",
     "test:debug": "rimraf output/ && babel ./src -d output -s inline && mocha output/tests/unit --recursive --reporter spec --debug-brk",
     "test:cover": "rimraf .nyc_output/ && cross-env BABEL_ENV=cover NYC_CWD=src nyc --reporter=lcov npm test",
     "build": "npm test && babel src/lib/ -d lib/",
@@ -57,7 +57,7 @@
     "fluxible": "^1.4.0",
     "fluxible-addons-react": "^0.2.13",
     "jsdom": "^13.0.0",
-    "mocha": "^5.0.0",
+    "mocha": "^6.0.1",
     "mockery": "^2.0.0",
     "nyc": "^13.0.1",
     "precommit-hook": "^3.0.0",
