--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,5 +19,10 @@
   "rules": {
     "indent": [2, 2, {"SwitchCase": 1}],
     "quotes": [2, "single"]
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
