--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
   "env": {
     "node": true
   },
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "plugins": [
     "react"
   ],
@@ -12,6 +12,7 @@
   ],
   "parserOptions": {
     "sourceType": "module",
+    "ecmaVersion": 9,
     "ecmaFeatures": {
       "jsx": true
     }
