--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-element-size-reporter",
-  "version": "0.8.5",
+  "version": "0.9.0",
   "description": "Higher order React components to report contained DOM element sizes",
   "main": "lib",
   "scripts": {
@@ -9,7 +9,7 @@
     "test:cover": "rimraf .nyc_output/ && cross-env BABEL_ENV=cover NYC_CWD=src nyc --reporter=lcov npm test",
     "build": "npm test && babel src/lib/ -d lib/",
     "lint": "eslint .",
-    "prepublish": "npm run build",
+    "prepublishOnly": "npm run build",
     "validate": "npm ls"
   },
   "repository": {
@@ -45,36 +45,36 @@
     "test"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/register": "^7.12.10",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-istanbul": "^6.0.0",
-    "chai": "^4.2.0",
-    "coveralls": "^3.1.0",
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.8",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/register": "^7.17.7",
+    "@babel/eslint-parser": "^7.17.0",
+    "babel-plugin-istanbul": "^6.1.1",
+    "chai": "^4.3.6",
+    "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
-    "eslint": "^7.18.0",
-    "eslint-plugin-react": "^7.22.0",
-    "fluxible": "^1.4.0",
+    "eslint": "^8.11.0",
+    "eslint-plugin-react": "^7.29.4",
+    "fluxible": "^1.4.2",
     "fluxible-addons-react": "^0.2.16",
-    "jsdom": "^16.4.0",
-    "mocha": "^8.2.1",
-    "mockery": "^2.0.0",
+    "jsdom": "^19.0.0",
+    "mocha": "^9.2.2",
+    "mockery": "^2.1.0",
     "nyc": "^15.1.0",
     "precommit-hook": "^3.0.0",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.2",
     "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "element-size-reporter": "^0.8.5",
+    "element-size-reporter": "^0.11.1",
     "inherits": "^2.0.4",
     "lodash.debounce": "^4.0.8",
-    "prop-types": "^15.7.2",
-    "react": "^16.14.0"
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2"
   },
   "engines": {
-    "node": ">= 10"
+    "node": ">= 14"
   }
 }
